tests/diagnostics/expressions/field_access/unknown_field/expect.txt
# exit: 1
input/lib.coppice:5:14: error: unknown field 'y' on Point
      return p.y
               ^
